completed contact-us.html

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <main>
         <section id="home-content">
             <div id="welcome">
-                <h1 class="center">Welcome</h1>
-                <p class="center">
+                <h1>Welcome</h1>
+                <p>
                     ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
                     ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
                     ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
