--- a/contact-us.html
+++ b/contact-us.html
@@ -1,7 +1,123 @@
-<script src="js/fake-send.js"></script>
-
-<form method="GET" action="contact-us.html" id="contact-form">
-    [ADD FORM PARTS HERE]
-    <input type="submit" value="Send Message" id="contact-form-submit">
-    <div id="contact-form-message"></div>
-</form>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/dark-mode.js"></script>
+    <script src="js/fake-send.js"></script>
+</head>
+<body>
+    <header>
+        <div id="logo-wrapper">
+            <a href="index.html">
+                <img src="https://via.placeholder.com/150x100.jpg" id="logo">
+                <figcaption>Allen Ship Center</figcaption>
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="about.html">
+                        About Us
+                    </a>
+                </li>
+                <li>
+                    <a href="subpage-1.html">
+                        Subpage 1
+                    </a>
+                </li>
+                <li>
+                    <a href="subpage-2.html">
+                        Subpage 2
+                    </a>
+                </li>
+                <li>
+                    <a href="contact-us.html">
+                        Contact Us
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="contact-us-content">
+            <div id="contact-us-intro">
+                <h1>Contact Us</h1>
+                <p>
+                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
+                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
+                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                </p>
+            </div>
+            <form method="GET" action="contact-us.html" id="contact-form">
+                <div id="contact-name">
+                    <label for="name">Name</label></br>
+                    <input id="name" type="text" placeholder="Insert your full name">
+                </div>
+                <div id="contact-subject">
+                    <label for="subject">Subject</label></br>
+                    <input id="subject" type="text" placeholder="Insert topic of message">
+                </div>
+                <div id="contact-message">
+                    <label for="message">Message</label></br>
+                    <textarea rows="5" cols="50" id="message" placeholder="Insert details of message"></textarea>
+                </div>
+                <h3 id="contact-question">What form of contact info would you us like us to contact back to?</h3>
+                <div id="contact-email">
+                    <label for="radio-1">E-Mail</label>
+                    <input id="radio-1" class="radio" type="radio" name="call-back">
+                    <div class="contact-info">
+                        <input type="text" id="email" placeholder="Insert E-Mail Address">
+                    </div>
+                </div>
+                <div id="contact-phone">
+                    <label for="radio-2">Phone</label>
+                    <input id="radio-2" class="radio" type="radio" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" name="call-back">
+                    <div class="contact-info">
+                        <input type="tel" id="phone" placeholder="Insert Phone Number">
+                    </div>
+                </div>
+                <input type="submit" value="Send Message" id="contact-form-submit">
+                <div id="contact-form-message"></div>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <nav>
+            <ul>
+                <li>
+                    <a href="style-guide.html">
+                        Style Guide
+                    </a>
+                </li>
+                <li>
+                    <a href="wireframes.html">
+                        Wireframes
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div id="legal">
+            &copy; 2021 Allen Ship Center. All Rights Reserved.
+        </div>
+        <div id="dark-mode">
+            <div class="icon" id="sun-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M22.088 13.126l1.912-1.126-1.912-1.126c-1.021-.602-1.372-1.91-.788-2.942l1.093-1.932-2.22-.02c-1.185-.01-2.143-.968-2.153-2.153l-.02-2.219-1.932 1.093c-1.031.583-2.34.233-2.941-.788l-1.127-1.913-1.127 1.913c-.602 1.021-1.91 1.372-2.941.788l-1.932-1.093-.02 2.219c-.01 1.185-.968 2.143-2.153 2.153l-2.22.02 1.093 1.932c.584 1.032.233 2.34-.788 2.942l-1.912 1.126 1.912 1.126c1.021.602 1.372 1.91.788 2.942l-1.093 1.932 2.22.02c1.185.01 2.143.968 2.153 2.153l.02 2.219 1.932-1.093c1.031-.583 2.34-.233 2.941.788l1.127 1.913 1.127-1.913c.602-1.021 1.91-1.372 2.941-.788l1.932 1.093.02-2.219c.011-1.185.969-2.143 2.153-2.153l2.22-.02-1.093-1.932c-.584-1.031-.234-2.34.788-2.942zm-10.117 6.874c-4.411 0-8-3.589-8-8s3.588-8 8-8 8 3.589 8 8-3.589 8-8 8zm6.029-8c0 3.313-2.687 6-6 6s-6-2.687-6-6 2.687-6 6-6 6 2.687 6 6z"/></svg>
+            </div>
+            <div id="tgl-wrapper">
+                <input class="tgl" id="dark-mode-toggle" type="checkbox"/>
+                <label class="tgl-btn" for="dark-mode-toggle"></label>
+            </div>
+            <div class="icon" id="moon-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 10.999c1.437.438 2.562 1.564 2.999 3.001.44-1.437 1.565-2.562 3.001-3-1.436-.439-2.561-1.563-3.001-3-.437 1.436-1.562 2.561-2.999 2.999zm8.001.001c.958.293 1.707 1.042 2 2.001.291-.959 1.042-1.709 1.999-2.001-.957-.292-1.707-1.042-2-2-.293.958-1.042 1.708-1.999 2zm-1-9c-.437 1.437-1.563 2.562-2.998 3.001 1.438.44 2.561 1.564 3.001 3.002.437-1.438 1.563-2.563 2.996-3.002-1.433-.437-2.559-1.564-2.999-3.001zm-7.001 22c-6.617 0-12-5.383-12-12s5.383-12 12-12c1.894 0 3.63.497 5.37 1.179-2.948.504-9.37 3.266-9.37 10.821 0 7.454 5.917 10.208 9.37 10.821-1.5.846-3.476 1.179-5.37 1.179z"/></svg>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
