completed about.html

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 </li>
                 <li>
                     <a href="subpage-1.html">
-                        Subpage 1
+                        Ratings
                     </a>
                 </li>
                 <li>
@@ -45,19 +45,75 @@
         </nav>
     </header>
     <main>
-        <section>
+         <div id="about-us-content">
+            <img src="https://via.placeholder.com/630x470.jpg">
+            <div>
+                <h1>About Us</h1>
+                <p>
+                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
+                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
+                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
+                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
+                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                </p>
+            </div>
+        </div>
+        <h1 id="staff">Honored Staff</h1>
+        <section class="cards">
+            <div class="card" class="col-1">
+                <img src="https://via.placeholder.com/250x250.jpg" alt="Avatar">
+                <div class="container">
+                  <h3><b>Empoyee 1</b></h3>
+                  <p>Profession/Role</p>
+                </div>
+            </div>
+            <p class="col-2">
+                uywgdiawh wandaihd bahrf a iabfiaobdnawhe aak aibdiw dba banwi  hwan iadiahdi dnawid akw uaidbiawbd awbd biw ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni biktr 
+                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
+                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+            </p>
+            <div class="card" class="col-1">
+                <img src="https://via.placeholder.com/250x250.jpg" alt="Avatar">
+                <div class="container">
+                  <h3><b>Employee 2</b></h3>
+                  <p>Profession/Role</p>
+                </div>
+            </div>
+            <p class="col-2">
+                uywgdiawh wandaihd bahrf a iabfiaobdnawhe aak aibdiw dba banwi  hwan iadiahdi dnawid akw uaidbiawbd awbd biw ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni biktr 
+                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
+                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+            </p>
+            <div class="card" class="col-1">
+                <img src="https://via.placeholder.com/250x250.jpg" alt="Avatar">
+                <div class="container">
+                  <h3><b>Employee 3</b></h3>
+                  <p>Profession/Role</p>
+                </div>
+            </div>
+            <p class="col-2">
+                uywgdiawh wandaihd bahrf a iabfiaobdnawhe aak aibdiw dba banwi  hwan iadiahdi dnawid akw uaidbiawbd awbd biw ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni biktr 
+                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
+                ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+            </p>
         </section>
     </main>
     <footer>
         <nav>
             <ul>
                 <li>
-                    <a href="style-guide.html">
+                    <a href="style-guide.html" target="_blank">
                         Style Guide
                     </a>
                 </li>
                 <li>
-                    <a href="wireframes.html">
+                    <a href="wireframes.html" target="_blank">
                         Wireframes
                     </a>
                 </li>
