--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </li>
                 <li>
                     <a href="subpage-1.html">
-                        Subpage 1
+                        Ratings
                     </a>
                 </li>
                 <li>
@@ -84,12 +84,12 @@
         <nav>
             <ul>
                 <li>
-                    <a href="style-guide.html">
+                    <a href="style-guide.html" target="_blank">
                         Style Guide
                     </a>
                 </li>
                 <li>
-                    <a href="wireframes.html">
+                    <a href="wireframes.html" target="_blank">
                         Wireframes
                     </a>
                 </li>
