added allen ship text and some assets

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="https://via.placeholder.com/150x100.jpg" id="logo">
+                <img src="assets/logo.png" id="logo">
+                <img src="assets/logo-dark.png" id="logo-dark">
                 <figcaption>Allen Ship Center</figcaption>
             </a>
         </div>
@@ -27,12 +28,12 @@
                 </li>
                 <li>
                     <a href="subpage-1.html">
-                        Ratings
+                        Services
                     </a>
                 </li>
                 <li>
                     <a href="subpage-2.html">
-                        Subpage 2
+                        Local Gifts
                     </a>
                 </li>
                 <li>
@@ -48,17 +49,22 @@
             <div id="welcome">
                 <h1>Welcome</h1>
                 <p>
-                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
-                    ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                    <br>Thank you for stopping by the Allen Ship Center website today! Here you’ll find all of the 
+                    information about what we do, how we do it, and how we can help make your shipping experience optimal.</br>
+                    <br>We are a small business that specializes in an excellent shipping experience in Allen, TX. Quality 
+                    shipping services here in Allen can be difficult, frustrating, or generally unpleasant to find – so it’s 
+                    a good thing you found us! We are all about making your day easier and better. Please take a look some of 
+                    our most popular services below. Need more help? <a href="contact-us.html">Contact us</a>.</br>
+                    <br>We truly are your one-stop-shop for all your shipping needs. If you would like to see our full range 
+                    of services our Shipping Page and Services Page have all the details. If you still can't find what your 
+                    looking for you can <a href="contact-us.html">Contact us</a> any time!</br>
                 </p>
             </div>
             <div>
-                <img src="https://via.placeholder.com/630x470.jpg" id="[PLACEHOLDER] 1">
+                <img src="assets/home/ship.jpeg" id="index-1" alt="">
             </div>
             <div>
-                <h2>[PLACEHOLDER]</h2>
+                <h2>Our Deliveries</h2>
                 <p>
                     ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
                     ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
@@ -67,15 +73,16 @@
                 </p>
             </div>
             <div>
-                <img src="https://via.placeholder.com/630x470.jpg" id="[PLACEHOLDER] 2">
+                <img src="assets/home/curley-cue-designs.jpg" id="index-2" alt">
             </div>
             <div>
-                <h2>[PLACEHOLDER]</h2>
+                <h2>Local Gifts</h2>
                 <p>
                     ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
                     ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
                     ibfueqwb fineifbniwgni ewnfin wegin wlgni oewg nioni bik gekow fnio webgiwgn ieq wn fiqwb fgwgi nwib fquwvdf uqb fgiewgi benqwu fbvquf bw igwrnfi qwbvfu qbfgj uwbg hiw 
-                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvf
+                    ebfi qbfi ubvgio bweibf giuqf vuqf vuweb giw bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib gjkq bvfq uvfiu gvou bgiwqbvfq uwgfuq ebfgib 
+                    <a href="subpage-2.html">click here</a>.
                 </p>
             </div>
         </section>
@@ -89,7 +96,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="wireframes.html" target="_blank">
+                    <a href="wireframes.html">
                         Wireframes
                     </a>
                 </li>
