--- a/subpage-2.html
+++ b/subpage-2.html
@@ -15,7 +15,8 @@
     <header>
         <div id="logo-wrapper">
             <a href="index.html">
-                <img src="https://via.placeholder.com/150x100.jpg" id="logo">
+                <img src="assets/logo.png" id="logo">
+                <img src="assets/logo-dark.png" id="logo-dark">
                 <figcaption>Allen Ship Center</figcaption>
             </a>
         </div>
@@ -28,12 +29,12 @@
                 </li>
                 <li>
                     <a href="subpage-1.html">
-                        Ratings
+                        Services
                     </a>
                 </li>
                 <li>
                     <a href="subpage-2.html">
-                        Subpage 2
+                        Local Gifts
                     </a>
                 </li>
                 <li>
@@ -57,7 +58,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="wireframes.html" target="_blank">
+                    <a href="wireframes.html">
                         Wireframes
                     </a>
                 </li>
