--- a/subpage-1.html
+++ b/subpage-1.html
@@ -53,7 +53,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="style-guide.html" target="_blank">
+                    <a href="style-guide.html">
                         Style Guide
                     </a>
                 </li>
