--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="style-guide.html" target="_blank">
+                    <a href="style-guide.html">
                         Style Guide
                     </a>
                 </li>
