--- a/contact-us.html
+++ b/contact-us.html
@@ -93,7 +93,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="style-guide.html" target="_blank">
+                    <a href="style-guide.html">
                         Style Guide
                     </a>
                 </li>
