--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="style-guide.html" target="_blank">
+                    <a href="style-guide.html">
                         Style Guide
                     </a>
                 </li>
